fix: height overflow

--- a/reset.css
+++ b/reset.css
@@ -4,3 +4,7 @@ html, body {
     padding: 0;
     margin: 0;
 }
+#__next{
+    height: 100%;
+    width: 100%;
+}
